--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,4 @@
-
-
-spring.datasource.url = ${db_url}
-spring.datasource.username = ${db_username}
-spring.datasource.password = ${db_password}
-
+spring.config.import= optional:secrets.properties
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
