--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 	<name>serviceguideBackend</name>
 	<description>Backend para proyecto integrador 2</description>
 	<properties>
-		<java.version>20.0.1</java.version>
+		<java.version>20</java.version>
 		<lombok.version>1.18.26</lombok.version>
 		<junit.version>5.9.2</junit.version>
 		<mapstruct.version>1.5.3.Final</mapstruct.version>
@@ -110,5 +110,22 @@
 			<artifactId>spring-security-test</artifactId>
 		</dependency>
 	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>3.3.0</version>
+				<configuration>
+					<archive>
+						<manifest>
+							<mainClass>proyecto.web.serviceguideBackend.ServiceguideBackendApplication</mainClass>
+						</manifest>
+					</archive>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
 
 </project>
