--- a/pom.xml
+++ b/pom.xml
@@ -113,18 +113,12 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<version>3.3.0</version>
-				<configuration>
-					<archive>
-						<manifest>
-							<mainClass>proyecto.web.serviceguideBackend.ServiceguideBackendApplication</mainClass>
-						</manifest>
-					</archive>
-				</configuration>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>3.0.6</version>
 			</plugin>
 		</plugins>
+		<finalName>serviceguideBackend</finalName>
 	</build>
 
 
