--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=true
+
+spring.jpa.properties.hibernate.schema_update.unique_constraint_strategy=RECREATE_QUIETLY
