--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,6 @@
 	<properties>
 		<java.version>20</java.version>
 		<lombok.version>1.18.26</lombok.version>
-		<junit.version>5.9.2</junit.version>
 		<mapstruct.version>1.5.3.Final</mapstruct.version>
 	</properties>
 
@@ -25,6 +24,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+			<version>3.0.6</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -78,36 +78,16 @@
 			<version>${mapstruct.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-devtools</artifactId>
-			<scope>runtime</scope>
-			<optional>true</optional>
-		</dependency>
-
-		<dependency>
 			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter</artifactId>
-			<version>${junit.version}</version>
+			<artifactId>junit-jupiter-api</artifactId>
+			<version>5.10.0-M1</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
+			<version>3.0.6</version>
 			<scope>test</scope>
-			<exclusions>
-				<exclusion>
-					<groupId>junit</groupId>
-					<artifactId>junit</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>org.junit.vintage</groupId>
-					<artifactId>junit-vintage-engine</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-test</artifactId>
 		</dependency>
 	</dependencies>
 	<build>
@@ -120,6 +100,4 @@
 		</plugins>
 		<finalName>serviceguideBackend</finalName>
 	</build>
-
-
 </project>
