--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,11 @@
 			<version>3.0.6</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
