--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,8 @@ spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=true
 
+mail.urlFront=http://89.116.25.43:5002/change-password/
+
 server.port=5001
 
 spring.jpa.properties.hibernate.schema_update.unique_constraint_strategy=RECREATE_QUIETLY
