--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,6 @@ spring.jpa.open-in-view=true
 
 server.port=5001
 
+front.Url = http://89.116.25.43:5002
+
 spring.jpa.properties.hibernate.schema_update.unique_constraint_strategy=RECREATE_QUIETLY
