--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=true
 
+front.URL = http://localhost:5002
 server.port=5001
 
 spring.jpa.properties.hibernate.schema_update.unique_constraint_strategy=RECREATE_QUIETLY
