--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,9 +9,8 @@ spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=true
 
-front.URL = http://localhost:5002
 server.port=5001
 
-front.Url = http://89.116.25.43:5002
+front.Url = http://localhost:5002
 
 spring.jpa.properties.hibernate.schema_update.unique_constraint_strategy=RECREATE_QUIETLY
