--- a/pom.xml
+++ b/pom.xml
@@ -79,8 +79,8 @@
 		</dependency>
 		<dependency>
 			<groupId>com.itextpdf</groupId>
-			<artifactId>itextpdf</artifactId>
-			<version>5.5.13.3</version>
+			<artifactId>itext7-core</artifactId>
+			<version>7.2.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
